assets/css/site.css
/* Panel from boostrap */
/*! Bootstrap v3.3.6 (http://getbootstrap.com)
    Copyright 2011-2015 Twitter, Inc.
    Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
*/

.panel {
  margin-bottom: 20px;
  background-color: #fff;
  border: 1px solid transparent;
  border-radius: 4px;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
          box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
}
.panel-body {
  padding: 15px;
}
.panel-heading {
  padding: 10px 15px;
  border-bottom: 1px solid transparent;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}
.panel-heading > .dropdown .dropdown-toggle {
  color: inherit;
}
.panel-title {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  color: inherit;
}
.panel-title > a,
.panel-title > small,
.panel-title > .small,
.panel-title > small > a,
.panel-title > .small > a {
  color: inherit;
}
.panel-footer {
  padding: 10px 15px;
  background-color: #f5f5f5;
  border-top: 1px solid #ddd;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}
.panel > .list-group,
.panel > .panel-collapse > .list-group {
  margin-bottom: 0;
}
.panel > .list-group .list-group-item,
.panel > .panel-collapse > .list-group .list-group-item {
  border-width: 1px 0;
  border-radius: 0;
}
.panel > .list-group:first-child .list-group-item:first-child,
.panel > .panel-collapse > .list-group:first-child .list-group-item:first-child {
  border-top: 0;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}
.panel > .list-group:last-child .list-group-item:last-child,
.panel > .panel-collapse > .list-group:last-child .list-group-item:last-child {
  border-bottom: 0;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}
.panel > .panel-heading + .panel-collapse > .list-group .list-group-item:first-child {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
.panel-heading + .list-group .list-group-item:first-child {
  border-top-width: 0;
}
.list-group + .panel-footer {
  border-top-width: 0;
}
.panel-default {
  border-color: #ddd;
}
.panel-default > .panel-heading {
  color: #333;
  background-color: #f5f5f5;
  border-color: #ddd;
}
.panel-default > .panel-heading + .panel-collapse > .panel-body {
  border-top-color: #ddd;
}
.panel-default > .panel-heading .badge {
  color: #f5f5f5;
  background-color: #333;
}
.panel-default > .panel-footer + .panel-collapse > .panel-body {
  border-bottom-color: #ddd;
}


/* List-group from Bootstrap */
.list-group {
  padding-left: 0;
  margin-bottom: 20px;
}
.list-group-item {
  position: relative;
  display: block;
  padding: 10px 15px;
  margin-bottom: -1px;
  background-color: #fff;
  border: 1px solid #ddd;
}
.list-group-item:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}
.list-group-item:last-child {
  margin-bottom: 0;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
}
a.list-group-item,
button.list-group-item {
  color: #555;
}
a.list-group-item .list-group-item-heading,
button.list-group-item .list-group-item-heading {
  color: #333;
}
a.list-group-item:hover,
button.list-group-item:hover,
a.list-group-item:focus,
button.list-group-item:focus {
  color: #555;
  text-decoration: none;
  background-color: #f5f5f5;
}
.list-group-item-heading {
  margin-top: 0;
  margin-bottom: 5px;
}
.list-group-item-text {
  margin-bottom: 0;
  line-height: 1.3;
}

/* ------- */
body {
  font-family: "Georgia", "PT Serif", "Times New Roman", serif;
  font-size: 16px;
  line-height: 1.42857143;
}

.container {
  max-width: 970px;
  margin: auto;
  padding: 0 15px;
}

h1, h2, h3, h4, h5, h6,
#footer, #header {
  font-family: "Trebuchet MS", "PT Sans", sans-serif;
}

a:link,
a:visited {
  color: #004cac;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

a.btn {
  font-family: "Trebuchet MS", "PT Sans", sans-serif;
}

code {
  color: #555;
  background-color: transparent;
  padding: 0;
}

blockquote {
  padding: 10px 20px;
  margin: 0 0 20px;
  border-left: 5px solid #eee;
  font-size: 16px;
  color: #555;
}

/* Blog */

#header h1 {
  font-size: 19px;
  font-weight: bold;
}

#header h1 a:link,
#header h1 a:visited {
  color: #999;
  text-decoration: none;
}

#header h1 a:hover {
  color: #ff4136;
}

#header .tagline:before {
  content: ' — ';
}

#header .tagline {
  font-weight: 100;
  color: #aaa;
  font-size: 16px;
}

#footer {
  font-size: 14px;
  padding: 10px 0;
  clear: both;
}

/* Sidebar */

.blog-sidebar {
  font-family: "Trebuchet MS", "PT Sans", sans-serif;
  font-size: 15px;
  padding: 10px;
  padding-bottom: 0;
}

@media (max-width: 749px) {
  .blog-sidebar {
    padding-top: 20px;
  }
}

@media (max-width: 992px) {
  .blog-sidebar {
    font-size: 13px;
  }
}

  .blog-sidebar .panel-content,
  .blog-sidebar .list-group-item {
  }

  .blog-sidebar .panel,
  .blog-sidebar .panel-heading {
    box-shadow: none;
  }

  .blog-sidebar .panel-heading {
    background: #f8f8f8;
    color: #777;
  }

  .blog-sidebar .list-group-item {
    border-color: #eee;
  }

.panel-projects .list-group-item-text {
  color: #aaa;
}

label {
  font-weight: normal;
}

.twitter-color {
  color: #55acee;
  fill: #55acee;
}

.facebook-color {
  color: #3d5b95;
  fill: #3d5b95;
}

.vk-color {
  color: #587d9f;
  fill: #587d9f;
}

.rss-color {
  color: #4374e0;
  fill: #4374e0;
}

.fa-ul-nospace {
  margin-left: 1.4em;
}

.bitcoin-color {
  color: #f0ad4e;
  fill: #f0ad4e;
}

.usd-color {
  color: #85bb65;
}

.info-color {
  color: #999;
}

.avatar {
  float: right;
}

.avatar img {
  border-radius: 50%;
}

/* Posts */

.blog-post {
  margin-top: 0;
  margin-bottom: 30px;
  margin-right: 30px;
}

@media (max-width: 749px) {
  .blog-post {
    margin-bottom: 30px;
  }
}

.blog-post-title {
  font-size: 36px;
  font-weight: bold;
  letter-spacing: -0.5px;
  padding-top: 0;
  margin-top: 0;
}

.blog-post-title > a:link,
.blog-post-title > a:visited {
  color: #333;
}

.blog-post-title > a:hover {
  color: #666;
  text-decoration: none;
}

.blog-post-content img {
  max-width: 100%;
  height: auto;
}

.blog-post-content form {
  font-family: "Trebuchet MS", "PT Sans", sans-serif;
}

.blog-post-meta {
  font-family: "Trebuchet MS", "PT Sans", sans-serif;
  font-size: 13px;
  color: #999;
}

.blog-post-date {
  display: inline-block;
  padding-top: 1px;
  line-height: 1;
  margin-right: 16px;
}

.blog-post-date a {
  cursor: pointer;
}

.blog-post-date a {
  color: #aaa;
  border-bottom: 1px dashed #ddd;
  text-decoration: none;
}

/* Comments for old imported posts */

.comments {
  margin: 30px 0;
  padding-top: 10px;
  border-top: 1px solid #eee;
  font-size: 14px;
}

.comment {
  margin-top: 20px;
}

.comment-author {
  font-weight: bold;
}

.comment-date {
  color: #999;
}

  .comment-date:before {
    content: ' / ';
  }

.comment-body {
  padding-left: 15px;
}

/* Page */

.page-header h1 {
  margin-top: 20px;
  margin-bottom: 10px;
  font-size: 38px;
  font-weight: bold;
}

.page-header {
  border-bottom: none;
  padding: 0;
  margin: 0;
}

a.tor-link {
  color: #3D9970;
}

a.bitcoin-link {
  color: #b8860b;
}

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
    a.bitcoin-link {
      font-size: 10px;
    }
}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
  a.bitcoin-link {
    font-size: 12px;
  }
}

@media (max-width: 992px) {
    .hidden-sm {
      display: none;
    }
}

.list-unstyled {
  list-style: none;
  padding-left: 0;
  margin: 0;
}

.list-inline {
  padding-left: 0;
  margin-left: -5px;
  list-style: none;
}

.list-inline > li {
  display: inline-block;
  padding-right: 5px;
  padding-left: 5px;
}

.list-share {
  display: inline-block;
}

.list-share > li {
  padding: 0 10px 0 0;
}

h4.list-group-item-heading {
  font-size: 18px;
  font-weight: normal;
}

hr {
  margin-top: 20px;
  margin-bottom: 20px;
  border: 0;
  border-top: 1px solid #eee;
}

